# bluetooth_sensor

./: .gitignore  CMakeLists.txt  PROJECT_SYNC.md  README.md
conf/: sensor_terminal.ini
docs/superpowers/plans/: 2026-06-30-bluez-c-sensor-terminal-plan.md
include/: app_config.h  app_log.h  proto_dispatch.h  proto_frame.h  proto_session.h  transport_api.h  transport_ble_gatt.h  transport_socket.h
src/: app_config.c  app_log.c  ble_dbus_app.c  ble_dbus_app.h  main.c  proto_dispatch.c  proto_frame.c  proto_session.c  transport_api.c  transport_ble_gatt.c  transport_socket.c  tx_queue.c  tx_queue.h
tests/: test_proto_dispatch.c  test_proto_frame.c  test_proto_session.c  test_transport_api.c  test_tx_queue.c
